--- a/custom_components/aprs_weather_station/translations/en.json
+++ b/custom_components/aprs_weather_station/translations/en.json
@@ -24,7 +24,7 @@
     "config_subentries": {
         "budlist": {
             "initiate_flow": {
-                "user": "Add callsign"
+                "user": "Add weather station"
             },
             "step": {
                 "user": {
