--- a/custom_components/aprs_weather_station/translations/en.json
+++ b/custom_components/aprs_weather_station/translations/en.json
@@ -43,5 +43,12 @@
                 "already_configured": "This entry is already configured."
             }
         }
+    },
+    "entity": {
+        "sensor": {
+            "wind_speed": {
+                "name": "[%key:component::sensor::entity_component::wind_speed::name%]"
+            }
+        }
     }
 }
