--- a/custom_components/aprs_weather_station/translations/en.json
+++ b/custom_components/aprs_weather_station/translations/en.json
@@ -45,10 +45,6 @@
         }
     },
     "entity": {
-        "sensor": {
-            "wind_speed": {
-                "name": "[%key:component::sensor::entity_component::wind_speed::name%]"
-            }
-        }
+        "sensor": {}
     }
 }
