--- a/custom_components/aprs_weather_station/translations/en.json
+++ b/custom_components/aprs_weather_station/translations/en.json
@@ -45,6 +45,13 @@
         }
     },
     "entity": {
-        "sensor": {}
+        "sensor": {
+            "message_received": {
+                "name": "# message received"
+            },
+            "last_timestamp": {
+                "name": "Last timestamp"
+            }
+        }
     }
 }
