--- a/custom_components/aprs_weather_station/translations/en.json
+++ b/custom_components/aprs_weather_station/translations/en.json
@@ -51,6 +51,9 @@
             },
             "last_timestamp": {
                 "name": "Last timestamp"
+            },
+            "wind_gust": {
+                "name": "Wind gust speed"
             }
         }
     }
