--- a/custom_components/aprs_weather_station/translations/en.json
+++ b/custom_components/aprs_weather_station/translations/en.json
@@ -47,7 +47,7 @@
     "entity": {
         "sensor": {
             "message_received": {
-                "name": "# message received"
+                "name": "#Message received"
             },
             "last_timestamp": {
                 "name": "Last timestamp"
