--- a/custom_components/aprs_weather_station/translations/en.json
+++ b/custom_components/aprs_weather_station/translations/en.json
@@ -54,6 +54,9 @@
             },
             "wind_gust": {
                 "name": "Wind gust speed"
+            },
+            "is_connected": {
+                "name": "Is connected"
             }
         }
     }
