fix location name

--- a/custom_components/aprs_weather_station/translations/en.json
+++ b/custom_components/aprs_weather_station/translations/en.json
@@ -58,6 +58,11 @@
             "is_connected": {
                 "name": "Is connected"
             }
+        },
+        "device_tracker": {
+            "location": {
+                "name": "Location"
+            }
         }
     }
 }
