--- a/custom_components/aprs_weather_station/translations/en.json
+++ b/custom_components/aprs_weather_station/translations/en.json
@@ -41,7 +41,8 @@
             },
             "abort": {
                 "already_configured": "This entry is already configured."
-            }
+            },
+            "entry_type": "List of weather stations"
         }
     },
     "entity": {
