--- a/custom_components/aprs_weather_station/translations/en.json
+++ b/custom_components/aprs_weather_station/translations/en.json
@@ -2,7 +2,7 @@
     "config": {
         "step": {
             "user": {
-                "description": "This information will be use by aprslib. See documentation {% set description_url = 'https://aprs-python.readthedocs.io/en/stable/examples.html#aprs-is' %}{{ description_url }}{% endset %}",
+                "description": "This information will be use by aprslib. See documentation https://aprs-python.readthedocs.io/en/stable/examples.html#aprs-is",
                 "data": {
                     "your_callsign": "Your callsign",
                     "callsign": "Callsign"
